--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -9,7 +9,7 @@
 
   color-scheme: light dark;
   color: black;
-  background-color: #A5ABAF;
+  background-color: #fffff4;
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
